--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,9 @@
   "icons": {
     "128": "logo.png"
   },
-  "permissions": ["active Tab"],
-  "action": {
-    "default_popup": "popup.html"
+  "permissions": ["activeTab"],
+  "browser_action": {
+    "default_popup": "popup.html",
+    "default_icon": "logo.png"
   }
 }
