fixed volume functionality

--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,18 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": "logo.png"
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "/assets/content.js"
+      ]
+    }
+  ],
+  "background": {
+    "service_worker": "/assets/background.js"
   }
 }
